bill, input and label

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -20,7 +20,12 @@
     <div class="logo__container">
       <img class="" src="images/logo.svg">
     </div>
-
+    <div class="calc__container">
+      <div class="bill">
+        <label class="label" for="bill">Bill</label>
+        <input class="bill__input input" type="text" name="bill" id="bill">
+      </div>
+    </div>
   </div>
 </body>
 </html>
