--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -62,6 +62,9 @@
           <p class="summary__text">Total <br><span>/ person</span></p>
           <p class="summary__number" id="total">$0.00</p>
         </div>
+        <div class="summary__button">
+          <button class="summary__btn">reset</button>
+        </div>
       </div>
     </div>
   </div>
