--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -22,7 +22,7 @@
       <div class="set__container">
         <div class="bill">
           <label class="label" for="bill">Bill</label>
-          <input class="bill__input input" type="text" name="bill" id="bill">
+          <input class="bill__input input" type="text" name="bill" id="bill" placeholder="0">
         </div>
         <div class="selectTip">
           <p class="label">Select Tip %</p>
@@ -52,7 +52,7 @@
             <label class="label" for="people">Number of People</label>
             <p class="errorMessage show">Can't be zero</p>
           </div>
-          <input class="input" id="people" type="text">
+          <input class="input" id="people" type="text" placeholder="0">
         </div>
       </div>
       <div class="summary">
@@ -63,7 +63,7 @@
           <p class="summary__number" id="total">$0.00</p>
         </div>
         <div class="summary__button">
-          <button class="summary__btn">reset</button>
+          <button class="summary__btn reset" type="reset">reset</button>
         </div>
       </div>
     </div>
