--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -22,6 +22,7 @@
       <div class="set__container">
         <div class="bill">
           <label class="label" for="bill">Bill</label>
+          <img class="bill__icon" src="images/icon-dollar.svg">
           <input class="bill__input input" type="text" name="bill" id="bill" placeholder="0">
         </div>
         <div class="selectTip">
@@ -52,6 +53,7 @@
             <label class="label" for="people">Number of People</label>
             <p class="errorMessage show">Can't be zero</p>
           </div>
+          <img class="people__icon" src="images/icon-person.svg">
           <input class="input" id="people" type="text" placeholder="0">
         </div>
       </div>
